--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Module-1-Hachathone</title>
 
+  <!--  font awsome cdn  -->
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+    <!-- browse font cdn  -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap" rel="stylesheet">
+
     <!-- bootstrap cdn -->
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -16,42 +27,148 @@
 
     <!-- ------------Header------ -->
 
-    <nav class="navbar  head navbar-expand-lg bg-body-tertiary" style="height: 100px;background-color: aquamarine !important;">
+    <nav class="navbar  head navbar-expand-lg bg-body-tertiary" style="min-height: 100px;background-color: white !important;">
   <div class="container-xxl">
-    <a class="navbar-brand" href="#">Navbar scroll</a>
+    <a class="navbar-brand" href="#"><img src="./images/logo.png" alt="logo image"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse header" id="navbarScroll">
-      <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+    <div class="collapse navbar-collapse  ms-auto header" id="navbarScroll">
+      <ul class="navbar-nav me-auto ms-auto my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active ms-auto ps-5" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">Link</a>
+          <a class="nav-link active ps-5" href="#">How tere works</a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Link
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
-        </li>
+      
         <li class="nav-item">
-          <a class="nav-link active" aria-disabled="true">Link</a>
+          <a class="nav-link active ps-5" aria-disabled="true">Tere Benefits</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/> -->
+        <button class="btn btn-outline-success p-3" type="submit" style="background-color: rgb(127, 184, 42); color: white; border: white solid;">Help Center</button>
       </form>
     </div>
   </div>
 </nav>
+
+
+     <!-- hero section start -->
+      <section class="hero container-xxl d-flex flex-xxl-row justify-content-center align-items-center justify-content-evenly">
+<!-- content div -->
+<div class="d-xxl-flex flex-xxl-column p-3 content">
+
+<div class="herohead"><h1>DOWNLOAD APP, SAVE MONEY, MAKE FRIENDS!</h1></div>
+<div class="herohead"><p>Its simple and its free. Play your part in reducing Carbon Footprint and help Mother Nature to sustain its beauty. So what are you waiting for ? Lets ride together</p></div>
+
+<div class=" d-xxl-flex flex-xxl-row buttons ">
+
+<div><button class="btn btn-outline-success p-3" type="submit" style="background-color:black; color: white; border: rgb(18, 18, 18) solid; font-weight: bold;"><img src="./images/bxl_play-store.png">DOWNLOAD</button>
+      </div>
+<div><button class="btn btn-outline-success p-3" type="submit" style="background-color:black; color:white; border: rgb(8, 8, 8) solid; font-weight: bold;"><img src="./images/Vector.png">DOWNLOAD</button>
+      </form></div>
+
+</div>
+</div>
+
+
+
+<!-- image div -->
+<div class="himage">
+<img src="./images/Hero image.png" alt="hero image">
+</div>
+
+</section>
+ <!-- hero section end -->
+   <!-- input section start -->
+
+<section class="d-flex justify-content-center justify-content-evenly input container-xxl align-items-center">
+  <!-- text div -->
+  <div class="text"><h4>Let’s go. Get a link to download the app.</h4></div>
+<!-- input duv -->
+   <div class="drive d-flex flex-xxl-row justify-content-evenly">
+     <div><div class="input-group mb-3 ">
+
+  <input type="text" class="form-control p-3" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Enter Mobile Phone Number" style="color: grey;">
+</div></div>
+      <div><button class="btn btn-outline-success p-2" type="submit" style="background-color:black; color: white; border: rgb(18, 18, 18) solid; font-weight: bold;"><img src="./images/bxl_play-store.png">Apply to Drive</button></div>
+   </div>
+</section>
+
+     <!-- input section end -->
+        <!-- slider section start -->
+
+
+        <section class="container-xxl d-flex justify-content-center flex-column sec3 ">
+       <!-- text div -->
+        <div class="text m-auto">
+          <div><h2>HOW <span style="color:  rgb(127, 184, 42);">TERE</span> WORKS</h2></div>
+              <div><p>Download and install the tere app. Enter your phone number and make your user account. when approved you may start driving.</p></div>
+        </div>
+
+        <!-- cARDS DIV -->
+
+
+        <div class=" carts d-flex justify-content-center justify-content-evenly align-items-center ">
+
+          <!--  -->
+             <div class="cards">
+             <div class="d-flex flex-xxl-column ">
+              <div><img src="./images/circle.png"> </div>
+               <div class="ca">
+               <h5 style="font-weight: bold;">REQUEST A RIDE</h5>
+               <p style="max-width: 300px;">Have to reach office or going for shopping ? Just put your current location and destination and search a ride that suits you</p>
+
+               </div>
+             </div>
+            <div>
+              <div class="d-flex flex-xxl-column ">
+              <div><img src="./images/circle.png"> </div>
+               <div class="ca">
+               <h5 style="font-weight: bold;">INSTANT NOTIFICATIONS</h5>
+               <p style="max-width: 300px;">Have to reach office or going for shopping ? Just put your current location and destination and search a ride that suits you</p>
+
+               </div></div>
+            </div>
+
+             </div>
+             <!--  -->
+             <div class="circle"><img src="./images/circle (2).png"></div>
+             <!--  -->
+              <div>
+                <div class="d-flex flex-xxl-column ">
+              <div><img src="./images/circle.png"> </div>
+               <div class="ca">
+               <h5 style="font-weight: bold;">POST A RIDE</h5>
+               <p style="max-width: 300px;">Have to reach office or going for shopping ? Just put your current location and destination and search a ride that suits you</p>
+
+               </div>
+             </div>
+            <div>
+              <div class="d-flex flex-xxl-column ">
+              <div><img src="./images/circle.png"> </div>
+               <div class="ca">
+               <h5 style="font-weight: bold;">CASHLESS PAYMENT</h5>
+               <p style="max-width: 300px;">Have to reach office or going for shopping ? Just put your current location and destination and search a ride that suits you</p>
+
+               </div></div>
+              </div>
+        </div>
+
+        </section>
+
+
+
+            <!-- slider section end -->
+   <!-- benefits section start -->   
+
+   <section>
+    
+   </section>
+    <!-- benefits section end -->
+
 
 
 
